fix dark mode modals

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1879,4 +1879,18 @@ body[data-brightness="dark"] {
 	img.invert-safe {
 		filter: invert(1);
 	}
+
+	.modal-content {
+		button.close {
+			filter: invert(1);
+		}
+	}
+}
+
+.modal-dialog {
+	border: 1px solid var(--border);
+
+	.modal-content {
+		background: var(--color-background);
+	}
 }
